k8sb38/ingress/ingressrule.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
     name: ingress
     annotations: 
        nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
    ingressClassName: nginx
    rules:
       - host:  aae59cda9d1b244649d1ccb98c271cb6-1308923125.us-east-2.elb.amazonaws.com
         http:
           paths:
              - path:  /
                pathType: Prefix 
                backend:
                    service:
                       name: nginxappci 
                       port: 
                          number: 80 
              - path:  /tomcat
                pathType: Prefix 
                backend:
                    service:
                       name: tomcatapp-ci
                       port: 
                          number: 8080
